# playground

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml
.github/workflows/: ci-auto-approve.yml  ci-codeowners.yml  ci-first-contribution.yml
geovista/drawsvg/: env.yml  logo.py
geovista/drawsvg/title/: title.py
geovista/drawsvg/title/embedded/: embedded.py
geovista/extrude/: from_unstructured__lfric_sst.py
geovista/fvcom/: fvcom_tamar.py  fvcom_tamar_timeseries.py  tamar_v2_2tsteps.nc  tamar_v2_reduced_var.nc
geovista/lfric-bbox/: borg.py  ikea.py  sst.py
geovista/region-manifold/: sst-bbox-enclosed.py  sst-bbox-mesh.py  sst-boundary.py  sst.py
geovista/requirements/: iris-geovista-qt.yml
geovista/smc/: smc.py  smc_timeseries.py
geovista/warp/: from_unstructured__lfric_orog.py  from_unstructured__lfric_orog_warp.py  from_unstructured__lfric_orog_warp_transform.py
geovista/warping/: from_unstructured__lfric_orog_warp.py
