[project]
requires-python = ">=3.12"



[tool.ruff]
extend-exclude = [
    "docs",
]
line-length = 88
src = ["geovista"]


[tool.ruff.format]
docstring-code-format = true
preview = false


[tool.ruff.lint]
ignore = [
    "D105",  # pydocstyle: undocumented-magic-method
]
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",   # isort
    "E",   # pycodestyle
    "W",
    "D",   # pydocstyle
    "F",   # pyflakes
    "UP",  # pyupgrade
]


[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["geovista"]


[tool.ruff.lint.mccabe]
max-complexity = 22


[tool.ruff.lint.pydocstyle]
convention = "numpy"
